@@ -36,6 +36,7 @@
 #include <WebCore/FileSystem.h>
 #include <WebCore/IconDatabase.h>
 #include <WebCore/Image.h>
+#include <WebCore/MainThread.h>
 #include <WebCore/PlatformString.h>
 #pragma warning(pop)
 #include "shlobj.h"
